# SDPLC

./: .gitignore  README.md  example.py  example_config.yaml  example_controller.py  example_controller.yaml  example_modbus.py  example_opcua.py  example_plc.py  example_plc.yaml  pyproject.toml  sine_generator.py  sine_generator.yaml  sine_receiver.py  sine_receiver.yaml  sine_wave_data_generator.txt  sine_wave_data_receiver.txt  slushy.py  slushy.yaml  time_client.py
example/: example_plc.py  example_plc_modbus.yaml  example_plc_opcua.yaml
experiments/: sine_generator.py  sine_generator.yaml  sine_receiver.yaml  sine_wave_data_generator.txt  sine_wave_data_receiver.txt
sdplc/: __init__.py  modbus.py  opcua.py  plc.py  router.py  schemas.py  sdplc.py
sdplc/modbus/: __init__.py  client.py  schemas.py  server.py
sdplc/opcua/: client.py  schemas.py  server.py
tests/: __init__.py  test_opcua_client.py
