[tool.poetry]
name = "sdplc"
version = "1.0.0"
description = "PLC Simulation and Remote Control"
authors = ["ulfaric <ryf0510@live.com>"]
readme = "README.md"
license = "CC-BY-NC-ND-4.0"
repository = "https://github.com/ulfaric/SDPLC"

[tool.poetry.dependencies]
python = "^3.10"
pymodbus = "^3.6.8"
opentelemetry-api = "^1.24.0"
opentelemetry-sdk = "^1.24.0"
opentelemetry-exporter-otlp = "^1.24.0"
pyyaml = "^6.0.1"
colorlog = "^6.8.2"
akatosh = "^3.0.6"
asyncua = "^1.1.0"
numpy = "^1.26.4"
fasterapi = "^0.0.41"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
